@@ -7,8 +7,8 @@ AUX orbit-2.14.17-winnt.patch 1002 RMD160 125f6657e8e43d27adc76c5908a11ad6013876
 DIST ORBit2-2.14.16.tar.bz2 739458 RMD160 69a76a246d06f10708cfda9c420be173e0746b39 SHA1 d366a92f8ce1989caf21cc6884f90cbcad42ea59 SHA256 e7bc69a316e6e2a263987a0aec5c6249dc152361e9559b4818a680681409aac1
 DIST ORBit2-2.14.17.tar.bz2 747503 RMD160 7e76fe543163fe9763e4a7e293640c7c87a160e8 SHA1 d1f38e9df5efc219f3a5cfb4d0a0cbc1b381fe1c SHA256 62bfce3f678f9347a19c766944e8aef7b89bc32b25ac23eb3e4c25929ce8974c
 DIST ORBit2-2.14.18.tar.bz2 747701 RMD160 8105c7323869be38a21de562878150f25da17f17 SHA1 76074570d3fc08d4e62d37f02023fe1af3b7be3f SHA256 c6148edd8044255aeed9ab1d1eeb3c39edd0aa1ace5d33cf6831b80d11f1ab7c
-EBUILD orbit-2.14.16.ebuild 1795 RMD160 d42897bb3189475f6f2135e71d7f65b140110d65 SHA1 7df1a7e2a5ac3dd22757114d83f1b9db6c9e7108 SHA256 9014fc681324a6ec672a13d05eb7432873676b69cf5dbb2cf85f6cafa189681c
-EBUILD orbit-2.14.17.ebuild 2376 RMD160 2227f76d9cf913fb6223c5737a0ef1521064213f SHA1 5774cbf7aa33e053d05d3c4d5931a3142b3e93b9 SHA256 5335ed6a5fc540b7793a522519554a3039ae1521de1bd7603e548b820af9d2d6
-EBUILD orbit-2.14.18.ebuild 2378 RMD160 050fbd4b5ebf59793f59c7dc822d20210ca58feb SHA1 5d4dc8a7276990b748e6d1725b34736b56410067 SHA256 ae4a8bfd6bc8759c472f5ec9d461813c7a243d580f83b4ff1d125406deb4da59
-MISC ChangeLog 19662 RMD160 acdb6c445809231967fbd7a1d78c24cfaf7888bc SHA1 e56f608fea9f8766a28121072922571e79bae0b6 SHA256 01ee510422459944e5ec40d659706b99cd15ece152b18bdbe61091a68e50cf5b
+EBUILD orbit-2.14.16.ebuild 1792 RMD160 2c0dcebcffa8a2fee4af9aa27db44426380b7fda SHA1 9826bc54566fd3f71bbd729c974f98456e289034 SHA256 8180ac739eb8b7cd000e3000ffdb49ae8a8c844a15be026db5acfd669c12e749
+EBUILD orbit-2.14.17.ebuild 2376 RMD160 4e725728eb06f374a762b6a0ac2c5419e64d134a SHA1 858e62511648eb6724ce0f845b84b9db7e221e27 SHA256 5930498dc1b092ce77fe31c2e605421458cc66da5780427b03d50e70e5babe7f
+EBUILD orbit-2.14.18.ebuild 2375 RMD160 220980b4a3ef0f206ced20fcdddaf6b9fc8996d2 SHA1 ae9e360b6c69e3d83a882e9805706a96bb8982c6 SHA256 51e7615f94691597409aba722644db649f91de47f042274e7263d4621a164330
+MISC ChangeLog 19910 RMD160 4039e51d0607d2b72d175c949a3619b1b458a3ab SHA1 a15341be7fe2e099797f6933558e8e1e0d44cb28 SHA256 c24a26e32907c438984682a43b4840ed4349dcc304e9843ebd6970e75d884a1a
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
